force-app/main/default/objects/AppLog__c/fields/Controlado__c.field-meta.xml
<CustomField>
    <fullName>Controlado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla de verificacion de lectura, se tilda a mano para saber que se vio el registro</description>
    <label>Controlado</label>
    <type>Checkbox</type>
</CustomField>