force-app/main/default/objects/AppLog__c/fields/id_app__c.field-meta.xml
<CustomField>
    <fullName>id_app__c</fullName>
    <label>id_app</label>
    <length>255</length>
    <type>Text</type>
</CustomField>