force-app/main/default/objects/AppLog__c/fields/json2__c.field-meta.xml
<CustomField>
    <fullName>json2__c</fullName>
    <label>json2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>