force-app/main/default/objects/AppLog__c/fields/Mensaje__c.field-meta.xml
<CustomField>
    <fullName>Mensaje__c</fullName>
    <label>Mensaje</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>