force-app/main/default/objects/AppLog__c/fields/objeto__c.field-meta.xml
<CustomField>
    <fullName>objeto__c</fullName>
    <label>objeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>