force-app/main/default/objects/AppLog__c/fields/Tipo_de_Errores__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Errores__c</fullName>
    <label>Tipo de Errores</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente - No es cliente EDI</fullName>
            </value>
            <value>
                <fullName>Cliente - Sucursal inexistente</fullName>
            </value>
            <value>
                <fullName>Cliente - Sin marca EDI</fullName>
            </value>
            <value>
                <fullName>Cliente - Cliente con Bloqueo</fullName>
            </value>
            <value>
                <fullName>Producto - Error en Producto</fullName>
            </value>
            <value>
                <fullName>Pedido - Sin orden de compra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>