force-app/main/default/objects/AppLog__c/recordTypes/App.recordType-meta.xml
<RecordType>
    <fullName>App</fullName>
    <active>true</active>
    <description>Errores de la APP</description>
    <label>App</label>
</RecordType>