force-app/main/default/objects/AppLog__c/recordTypes/EDI.recordType-meta.xml
<RecordType>
    <fullName>EDI</fullName>
    <active>true</active>
    <description>Errores de ordens EDI</description>
    <label>EDI</label>
</RecordType>