force-app/main/default/objects/AppLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>objeto__c</columns>
    <columns>id_app__c</columns>
    <columns>Usuario__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Mensaje__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>