force-app/main/default/objects/AppLog__c/listViews/EDI.listView-meta.xml
<ListView>
    <fullName>EDI</fullName>
    <columns>NAME</columns>
    <columns>Pedido__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AppLog__c.EDI</value>
    </filters>
    <label>EDI</label>
</ListView>