force-app/main/default/objects/AppLog__c/listViews/Visita_M_dica.listView-meta.xml
<ListView>
    <fullName>Visita_M_dica</fullName>
    <columns>NAME</columns>
    <columns>json__c</columns>
    <columns>Mensaje__c</columns>
    <columns>Objeto__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AppLog__c.App</value>
    </filters>
    <label>Visita Médica</label>
</ListView>